# PhotonAnalysis

./: .gitignore  CMakeLists.txt
bash/: plotMultiplePAFiles.sh
include/: DrawSlave.h  Drawer.h  Functions.h  LinkDef.h  Utility.h
macros/: aperturePhYield.C  plotFromCSV.C  plotFromJson.C  plotMultiPAFilesStandard.C  plotPAFile.C  plotPAFile6chReadout.C  plotSpecific.C  testReadFile.C  testReadPAFile.C
run/: plotComparison.json  plotConfig.json  plotPhotocurrent.json
src/: DrawSlave.cxx  Drawer.cxx  Functions.cxx  Utility.cxx
